# TemiRobot

PathPlan/ARA_star_temi/: ARA_star.cpp  CMakeLists.txt
PathPlan/A_star_temi/: A_star.cpp  CMakeLists.txt
PathPlan/Best_fit_temi/: CMakeLists.txt  Double.cpp  Main.cpp  Shapes.cpp
PathPlan/Docking_detection_temi/devel/: .catkin  local_setup.sh
PathPlan/Docking_detection_temi/src/: CMakeLists.txt  LaserType.cpp  LaserType.h  LineType.cpp  LineType.h  PointToLineType.cpp  PointToLineType.h  detection.cpp
PathPlan/Docking_detection_temi/src/Best_fit_temi/: BestFit.cpp  cholesky.h
